--- a/style.css
+++ b/style.css
@@ -1,81 +1,40 @@
-*{
-  padding: 0;
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-  box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-body{
-  width: 100%;
-  height: 100vh;
-  background-color: #33343f;
+:root {
+    --text-color: #FFFFFF;
+    --icon-color: #ACACBE;
+    --icon-hover-bg: #5B5E71;
+    --placeholder-color: #DCDCDC;
+    --outgoing-chat-bg: #343541;
+    --incoming-chat-bg: #444654;
+    --outgoing-chat-border: #343541;
+    --incoming-chat-border: #444654;
 }
 
-.chat{
-  display: flex;
-  gap: 20px;
-  padding: 25px;
-  color: #fff;
-  font-size: 15px;
-  font-weight: 300;
+.light-mode {
+    --text-color: #343641;
+    --icon-color: #A9A9BC;
+    --icon-hover-bg: #FAFAF3;
+    --placeholder-color: #6C6C6C;
+    --outgoing-chat-bg: #FFFFFF;
+    --incoming-chat-bg: #F7F7F8;
+    --outgoing-chat-border: #FFFFFF;
+    --incoming-chat-border: #D9D9E3;
 }
 
-.chat img{
-  width: 35px;
-  height: 35px;
+body {
+    background-color: var(--outgoing-chat-bg);
 }
 
-.response{
-  background-color: #494b59;
-}
+/* Chat container style */
 
-.messagebar{
-  position: fixed;
-  bottom: 0;
-  height: 5rem;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-top: 1px solid #494b59;
-  background-color: #33343f;
-}
 
-.messagebar .bar-wrapper{
-  background-color: #494b59;
-  border-radius: 5px;
-  width: 60vw;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+/* Typing Container Style */
 
-.bar-wrapper input{
-  width: 100%;
-  padding: 5px;
-  border: none;
-  outline: none;
-  font-size: 14px;
-  background: none;
-  color: #ccc;
-}
 
-.bar-wrapper input::placeholder{
-  color: #ccc;
-}
-
-.messagebar button{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: none;
-  border: none;
-  color: #fff;
-  cursor: pointer;
-}
-
-.message-box{
-  height: calc(100vh - 5rem);
-  overflow-y: auto;
-}
+/* Responsive media query */
